--- a/.github/workflows/scan.yaml
+++ b/.github/workflows/scan.yaml
@@ -24,6 +24,13 @@ jobs:
           template: '@/contrib/sarif.tpl'
           output: 'trivy-slim-buster.sarif'
 
+      - name: 'Safe trivy-indy-node-latest.sarif'
+        uses: actions/upload-artifact@v2
+        with:
+          name: trivy-slim-buster.sarif
+          path: trivy-slim-buster.sarif
+          retention-days: 8
+          
       # Upload works fine, but analysis fails
       - name: Upload Trivy slim-buster scan results to GitHub Security tab
         uses: github/codeql-action/upload-sarif@v1
