--- a/.github/workflows/trivy-analysis.yml
+++ b/.github/workflows/trivy-analysis.yml
@@ -22,8 +22,7 @@ jobs:
         uses: aquasecurity/trivy-action@master
         with:
           image-ref: 'python:3.6-slim-buster'
-          format: 'template'
-          template: '@sarif_test.tpl'
+          format: 'sarif'
           output: 'trivy-slim-buster.sarif'
 
       - name: 'Safe trivy-indy-node-latest.sarif'
